# HuaweiCode-2025

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  check.sh  code_craft  compose.yml  debug.txt  make.sh  run.sh
src/: CMakeLists.txt  code_craft  disk_manager.cpp  disk_manager.h  main.cpp  parameters.h  schema_manager.cpp  schema_manager.h
